<resources>
    <string name="app_name">NexNet Solutions</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">*</string>
    <string name="btn_backspace">#</string>
    <string name="title_activity_call_screen">CallScreenActivity</string>

    <string name="call_in_count">%1$d↙ </string>
    <string name="call_out_count">%1$d↗ </string>
    <string name="call_cancel">Cancelled</string>
    <string name="call_miss">Missed</string>
    <string name="logout">Logout</string>
    <string name="free_call">Free Call</string>
    <string name="title_activity_call_answer_screen">CallAnswerScreenActivity</string>
</resources>
